WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197427
font-weight: 1000 is not parsed successfully
https://bugs.webkit.org/show_bug.cgi?id=197427
Summary
font-weight: 1000 is not parsed successfully
Myles C. Maxfield
Reported
2019-04-30 12:23:08 PDT
font-weight: 1000 is not parsed successfully
Attachments
Patch
(5.31 KB, patch)
2019-04-30 12:24 PDT
,
Myles C. Maxfield
dino
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews117 for mac-highsierra
(3.46 MB, application/zip)
2019-04-30 14:04 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews200 for win-future
(12.92 MB, application/zip)
2019-04-30 14:06 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2019-04-30 12:24:31 PDT
Created
attachment 368586
[details]
Patch
Dean Jackson
Comment 2
2019-04-30 12:37:58 PDT
Comment on
attachment 368586
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=368586&action=review
> LayoutTests/fast/text/font-weight-1-1000.html:16 > +let reference = window.getComputedStyle(document.getElementById("reference")).getPropertyValue("font-weight");
Super super super nit: const :)
Jon Lee
Comment 3
2019-04-30 12:38:33 PDT
Comment on
attachment 368586
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=368586&action=review
> LayoutTests/fast/text/font-weight-1-1000-expected.txt:11 > +PASS window.getComputedStyle(document.getElementById('test6')).getPropertyValue('font-weight') is "1000"
not the other side of the <= comparison? 1000.5, 1001?
EWS Watchlist
Comment 4
2019-04-30 14:04:43 PDT
Comment on
attachment 368586
[details]
Patch
Attachment 368586
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/12043597
New failing tests: http/tests/security/window-events-clear-port.html webaudio/up-mixing-stereo-51.html
EWS Watchlist
Comment 5
2019-04-30 14:04:44 PDT
Created
attachment 368607
[details]
Archive of layout-test-results from ews117 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 6
2019-04-30 14:06:30 PDT
Comment on
attachment 368586
[details]
Patch
Attachment 368586
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/12043871
New failing tests: fast/text/font-weight-1-1000.html
EWS Watchlist
Comment 7
2019-04-30 14:06:41 PDT
Created
attachment 368609
[details]
Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Myles C. Maxfield
Comment 8
2019-04-30 18:14:50 PDT
Committed
r244817
: <
https://trac.webkit.org/changeset/244817
>
Radar WebKit Bug Importer
Comment 9
2019-04-30 18:17:16 PDT
<
rdar://problem/50358084
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug