font-weight: 1000 is not parsed successfully https://bugs.webkit.org/show_bug.cgi?id=197427

Reviewed by Dean Jackson.

Source/WebCore:

The spec says:
"Only values greater than or equal to 1, and less than or equal to 1000, are valid"

This change brings us in-line with all the other browsers.

Test: fast/text/font-weight-1-1000.html

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeFontWeightNumber):

LayoutTests:

* platform/win/TestExpectations: Windows disables variation fonts, so requires values to be divisible by 100
* fast/text/font-weight-1-1000-expected.txt: Added.
* fast/text/font-weight-1-1000.html: Added.

Canonical link: https://commits.webkit.org/211630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244817 268f45cc-cd09-0410-ab3c-d52691b4dbfc